Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27569

Locals and Expressions debug view loose selected item on expansion

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 14.0.0
    • Qt Creator 7.0.0
    • Debugger
    • None
    • Linux/X11
    • 15e56078b (master)

      Steps to reproduce

      Start a debug session, set a breakpoint, run a program, and hit the breakpoint. Focus on the "Locals" view, use the keyboard to navigate to the specific item, and then expand it with key press (Right arrow (→, Qt::Key_Right) on my system).

      Actual behavior

      Item is expanded, but TreeView forgets what element was selected. I.e. when the user presses "Down" on the keyboard, the topmost item is selected rather than the first child item of the recently expanded item.

      Expected behavior

      Item is expanded, TreeView keeps the current item selected. Pressing down selects the first child item of the recently expanded item.

       

      IIRC, this also happened with older Qt Creator versions.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            enmk Vasily Nemkov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes